--- a/app/src/main/res/layout/list_item_crime.xml
+++ b/app/src/main/res/layout/list_item_crime.xml
@@ -14,7 +14,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_solved" />
+        app:srcCompat="@mipmap/ic_solved"
+        android:contentDescription="@string/crime_solved_description"
+        />
 
     <TextView
         android:id="@+id/crime_title"
