--- a/app/src/main/res/layout/dialog_date.xml
+++ b/app/src/main/res/layout/dialog_date.xml
@@ -4,6 +4,7 @@
     android:id="@+id/dialog_date_picker"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:calendarViewShown="false">
+    android:calendarViewShown="false"
+    android:contentDescription="Select a date">
 
 </DatePicker>
